--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -8,7 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
+# load 
 ```{r install libraries, message=FALSE}
 
 library(tidyverse) # includes ggplot2, dplyr, tidyr, readr, purr, tibble, stringr, forcats
@@ -640,31 +640,6 @@ unique(abcover_byspecies$species)
 
 ```
 
-### (6) Prepare data for an NMDS (percent cover x species x standtype)
-```{r transpose percent cover data by species, include=TRUE}
-
-# use this for GROUPS: abcover_byspecies_nmdsprep
-
-abcover_byspecies_nmdsprep <- abcover_byspecies %>% 
-  tidyr::spread(species, percentcover) %>% # transpose data so columns are species
-  replace(is.na(.), 0) # replace NA with zeros
-
-#view(abcover_byspecies_nmdsprep)
-# 15 sites (rows) by 48 columns
-str(abcover_byspecies_nmdsprep)
-
-
-abcover_byspecies_nmdsprep_num <- abcover_byspecies_nmdsprep %>% 
-  # use the ungroup() function to take out grouping
-  ungroup() %>% 
-  dplyr::select(!c(standtype, site_rep, site)) # standtype, site_rep
-# 15 sites (rows) by 33 species (columns)
-# DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
-         
-view(abcover_byspecies_nmdsprep_num) # only numbers
-write.csv(abcover_byspecies_nmdsprep_num, "processed/nmds_aboveground.csv")
-```
-
 ### (7) Percent Cover
 ```{r above ground percent cover, include=TRUE}
 
@@ -902,6 +877,33 @@ summary(sppdiv_aov)
 ```
 
 # NMDS 
+
+### (6) Prepare data for an NMDS (percent cover x species x standtype)
+```{r transpose percent cover data by species, include=TRUE}
+
+# use this for GROUPS: abcover_byspecies_nmdsprep
+
+abcover_byspecies_nmdsprep <- abcover_byspecies %>% 
+  tidyr::spread(species, percentcover) %>% # transpose data so columns are species
+  replace(is.na(.), 0) # replace NA with zeros
+
+#view(abcover_byspecies_nmdsprep)
+# 15 sites (rows) by 48 columns
+str(abcover_byspecies_nmdsprep)
+
+
+abcover_byspecies_nmdsprep_num <- abcover_byspecies_nmdsprep %>% 
+  # use the ungroup() function to take out grouping
+  ungroup() %>% 
+  dplyr::select(!c(standtype, site_rep, site)) # standtype, site_rep
+# 15 sites (rows) by 33 species (columns)
+# DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
+         
+view(abcover_byspecies_nmdsprep_num) # only numbers
+write.csv(abcover_byspecies_nmdsprep_num, "processed/nmds_aboveground.csv")
+```
+
+
 ### load
 ```{r nmds by species percent cover}
 
